# sps-gbm

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  main.py  requirements.txt
benches/: benchmarks.rs
crates/core/: Cargo.toml
crates/core/benches/: benchmarks.rs
crates/core/src/: calculations.rs  data.rs  lib.rs  main.rs  plot.rs
crates/core/tests/: cli_tests.rs
crates/simulations/: Cargo.toml
crates/simulations/benches/: benchmarks.rs
crates/simulations/src/: lib.rs
legacy/: main.py  requirements.txt
src/: calculations.rs  lib.rs  main.rs  plot.rs
tests/: lib_tests.rs
