[package]
name = "sps-gbm"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.36", features = ["derive"] }
dotenvy = "0.15.7"
plotters = "0.3.7"
rand = "0.9.0"
rand_distr = "0.5.1"
rayon = "1.10.0"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
statrs = "0.18.0"
tempfile = "3.19.1"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmarks"
harness = false
