[workspace]
members = ["crates/core", "crates/simulations"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
simulations = { path = "crates/simulations" }
rand = "0.9.0"
rand_distr = "0.5.1"
rayon = "1.10.0"
chrono = "0.4.40"
plotters = "0.3.7"
tempfile = "3.19.1"
statrs = "0.18.0"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
dotenvy = "0.15.7"
clap = { version = "4.5.36", features = ["derive"] }
serde_json = "1.0.140"
assert_cmd = "2.0.16"
criterion = "0.5.1"
predicates = "3.1.3"
